fix: use grid instaed of flex because safari doesnt suport gap on flex and there is no goos way to feature detect

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -2997,10 +2997,9 @@ main.grid > a:focus :not(img),
 
 #enter_player_box {
     grid-column: 1 / -1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
     gap: 25px;
     padding: 25px 0;
 }
